[package]
name = "grammarly"
version = "0.1.0"
authors = ["Victor Polevoy <fx@thefx.co>"]
edition = "2018"

[dependencies]
#failure = "0.1"
error-chain = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.reqwest]
optional = true
version = "0.9"

[features]
default = []
client = ["reqwest"]
