[package]
name = "grammarbot-io"
version = "1.0.1"
authors = ["Victor Polevoy <fx@thefx.co>"]
edition = "2018"
description = """
This crate allows you to check your texts for grammar using the grammarbot service. """
repository = "https://github.com/iddm/grammarbot-io"
documentation = "https://docs.rs/grammarbot-io/"
readme = "README.md"
license = "MIT"
keywords = ["grammar", "english", "api", "request", "language"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.reqwest]
optional = true
version = "0.11"
features = ["blocking", "json"]

[features]
default = ["client"]
client = ["reqwest"]
